objects/RIC_Amb_Programmation_Activation__c.object
<CustomObject>
    <description>RIC_AMB : This object allows the ambassadors to enter the information before, during the activation &quot;(animation, événement)&quot;</description>
    <fields>
        <fullName>RIC_Amb_Achats_COLS__c</fullName>
        <label>Achats (COLS)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RIC_Amb_Adresse_client__c</fullName>
        <label>Adresse client</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RIC_Amb_BRI_coupons__c</fullName>
        <label>BRI (coupons)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RIC_Amb_Budget__c</fullName>
        <label>Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RIC_Amb_Cible_client_typologie__c</fullName>
        <label>Cible client typologie</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low Energy Bar-Iconique</fullName>
                </value>
                <value>
                    <fullName>Low Energy Bar-Leader</fullName>
                </value>
                <value>
                    <fullName>Low Energy Bar-Premium</fullName>
                </value>
                <value>
                    <fullName>Low Energy Bar-Standard</fullName>
                </value>
                <value>
                    <fullName>Restaurant-Iconique</fullName>
                </value>
                <value>
                    <fullName>Restaurant-Leader</fullName>
                </value>
                <value>
                    <fullName>Restaurant-Premium</fullName>
                </value>
                <value>
                    <fullName>Restaurant-Standard</fullName>
                </value>
                <value>
                    <fullName>High Energy Bar-Iconique</fullName>
                </value>
                <value>
                    <fullName>High Energy Bar-Leader</fullName>
                </value>
                <value>
                    <fullName>High Energy Bar-Premium</fullName>
                </value>
                <value>
                    <fullName>High Energy Bar-Standard</fullName>
                </value>
                <value>
                    <fullName>Night Club-Iconique</fullName>
                </value>
                <value>
                    <fullName>Night Club-Leader</fullName>
                </value>
                <value>
                    <fullName>Night Club-Premium</fullName>
                </value>
                <value>
                    <fullName>Night Club-Standard</fullName>
                </value>
                <value>
                    <fullName>Caviste-Leader</fullName>
                </value>
                <value>
                    <fullName>Caviste-Premium</fullName>
                </value>
                <value>
                    <fullName>Caviste-Standard</fullName>
                </value>
                <value>
                    <fullName>BtB</fullName>
                </value>
                <value>
                    <fullName>Institutionnels</fullName>
                </value>
                <value>
                    <fullName>Association</fullName>
                </value>
                <value>
                    <fullName>Digital</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Grossiste</fullName>
                </value>
                <value>
                    <fullName>GD</fullName>
                </value>
                <value>
                    <fullName>Proxi HDO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RIC_Amb_Code_Postal__c</fullName>
        <label>Code Postal</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Amb_Code_client_Ricard_GEO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Code client Ricard (GEO)</label>
        <referenceTo>RIC_Amb_Code_Client_ELITE__c</referenceTo>
        <relationshipLabel>Programmation Activations</relationshipLabel>
        <relationshipName>Programmation_Activations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RIC_Amb_Commentaire__c</fullName>
        <label>Commentaire</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RIC_Amb_Consommation_sur_site__c</fullName>
        <inlineHelpText>Nombre de ventes sur les marques animées</inlineHelpText>
        <label>Consommation sur site (COLS)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RIC_Amb_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>RIC_Amb_Contact_Consommateur__c</referenceTo>
        <relationshipLabel>Programmation Activations</relationshipLabel>
        <relationshipName>Programmation_Activations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RIC_Amb_Date_heure_de_d_but__c</fullName>
        <label>Date/heure de début</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RIC_Amb_Date_heure_de_fin__c</fullName>
        <label>Date/heure de fin</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RIC_Amb_Dispositif_utilise__c</fullName>
        <label>Dispositif utilisé</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TBD</fullName>
                </value>
                <value>
                    <fullName>TBD2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RIC_Amb_Duree_effective__c</fullName>
        <label>Durée effective (en heure)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RIC_Amb_Email_Activation__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>RIC_Amb_External_ID_Programmation_Activa__c</fullName>
        <externalId>true</externalId>
        <label>External ID Programmation Activation</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>RIC_Amb_Lieu__c</fullName>
        <label>Lieu</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Amb_Modele_d_Activation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Modèle d&apos;Activation</label>
        <referenceTo>RIC_Amb_Modele_Activation__c</referenceTo>
        <relationshipLabel>Programmation Activations</relationshipLabel>
        <relationshipName>Programmation_Activations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RIC_Amb_Nombre_de_contacts__c</fullName>
        <inlineHelpText>Nombre de contacts sensibilisé à la marque</inlineHelpText>
        <label>Nombre de contacts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RIC_Amb_Nombre_de_personnes_pr_sentes__c</fullName>
        <label>Nombre de personnes présentes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RIC_Amb_Nombre_de_personnes_prevues__c</fullName>
        <label>Nombre de personnes prévues</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>50-100</fullName>
                </value>
                <value>
                    <fullName>100-500</fullName>
                </value>
                <value>
                    <fullName>500 et plus</fullName>
                </value>
                <value>
                    <fullName>0-20</fullName>
                    <isActive>false</isActive>
                    <label>0-20</label>
                </value>
                <value>
                    <fullName>20-50</fullName>
                    <isActive>false</isActive>
                    <label>20-50</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RIC_Amb_Nombre_de_verres_achetes__c</fullName>
        <label>Nombre de verres achetés</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RIC_Amb_Nombre_de_verres_offerts__c</fullName>
        <label>Nombre de verres offerts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RIC_Amb_Nombre_tags_Ambassadeurs__c</fullName>
        <label>Nombre de posts Ambassadeurs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RIC_Amb_Nombre_tags_Clients__c</fullName>
        <label>Nombre de posts clients/organisateur</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RIC_Amb_Nombre_tags_Consommateurs__c</fullName>
        <label>Nombre de posts Consommateurs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RIC_Amb_Qualite_Vendue__c</fullName>
        <label>Qualité Principale</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>RIC_Amb_Marques_et_Qualite</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>RIC_Amb_Qualite_donnee__c</fullName>
        <label>Qualité donnée</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>RIC_Amb_Marques_et_Qualite</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>RIC_Amb_Quantite_Donnee__c</fullName>
        <label>Quantité Donnée</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RIC_Amb_Quantite_Vendue__c</fullName>
        <label>Quantité Principale</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RIC_Amb_Repartition_Femme__c</fullName>
        <formula>( 1 - RIC_Amb_Repartition_Homme__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Répartition Femme</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RIC_Amb_Repartition_Homme__c</fullName>
        <label>Répartition Homme</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RIC_Amb_Sous_Typologie_Animation__c</fullName>
        <label>Sous-Typologie Animation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dégustation</fullName>
                </value>
                <value>
                    <fullName>Mentoring</fullName>
                </value>
                <value>
                    <fullName>Visibilité</fullName>
                </value>
                <value>
                    <fullName>Média</fullName>
                </value>
                <value>
                    <fullName>RP</fullName>
                </value>
                <value>
                    <fullName>Autre</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RIC_Amb_Sous_typologie__c</fullName>
        <label>Sous-typologie</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>RIC_Amb_Typologie_Evenement__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>RIC_Amb_Sous_typologie_Global_Value</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>RIC_Amb_Statut2__c</fullName>
        <label>Statut2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ouvert</fullName>
                    <default>true</default>
                    <label>Ouvert</label>
                </value>
                <value>
                    <fullName>En cours</fullName>
                </value>
                <value>
                    <fullName>Fermé</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RIC_Amb_Statut__c</fullName>
        <label>Statut</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ouvert</fullName>
                    <default>true</default>
                    <label>Ouvert</label>
                </value>
                <value>
                    <fullName>En cours</fullName>
                </value>
                <value>
                    <fullName>Fermé</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RIC_Amb_Tags__c</fullName>
        <inlineHelpText># tags par marque</inlineHelpText>
        <label># Tags</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Amb_Tranches_Ages__c</fullName>
        <label>Tranches d&apos;âges</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>18-25 ans</fullName>
                </value>
                <value>
                    <fullName>25-35 ans</fullName>
                </value>
                <value>
                    <fullName>35-45 ans</fullName>
                </value>
                <value>
                    <fullName>45 ans et plus</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RIC_Amb_Type_d_Activation__c</fullName>
        <formula>(RIC_Amb_Modele_d_Activation__r.RecordType.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type d&apos;Activation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Amb_Type_de_lieu__c</fullName>
        <label>Type de lieu</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DRV</fullName>
                </value>
                <value>
                    <fullName>Externe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RIC_Amb_Typologie_Evenement__c</fullName>
        <label>Typologie Evènement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Culturel</fullName>
                </value>
                <value>
                    <fullName>Etudiant</fullName>
                </value>
                <value>
                    <fullName>Institutionnel</fullName>
                </value>
                <value>
                    <fullName>Médiatique</fullName>
                </value>
                <value>
                    <fullName>Musical</fullName>
                </value>
                <value>
                    <fullName>Populaire</fullName>
                </value>
                <value>
                    <fullName>Business/professionnel</fullName>
                </value>
                <value>
                    <fullName>Sportif</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RIC_Amb_Ville__c</fullName>
        <label>Ville</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Programmation Activation</label>
    <listViews>
        <fullName>RIC_Amb_Programmation_Animation</fullName>
        <columns>NAME</columns>
        <columns>RIC_Amb_Modele_d_Activation__c</columns>
        <columns>RIC_Amb_Code_client_Ricard_GEO__c</columns>
        <columns>RIC_Amb_Lieu__c</columns>
        <columns>RIC_Amb_Date_heure_de_d_but__c</columns>
        <columns>RIC_Amb_Date_heure_de_fin__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RIC_Amb_Type_d_Activation__c</field>
            <operation>equals</operation>
            <value>Animation</value>
        </filters>
        <label>Animation</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>RIC_Amb_Programmation_Evenement</fullName>
        <columns>NAME</columns>
        <columns>RIC_Amb_Modele_d_Activation__c</columns>
        <columns>RIC_Amb_Code_client_Ricard_GEO__c</columns>
        <columns>RIC_Amb_Lieu__c</columns>
        <columns>RIC_Amb_Date_heure_de_d_but__c</columns>
        <columns>RIC_Amb_Date_heure_de_fin__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RIC_Amb_Type_d_Activation__c</field>
            <operation>equals</operation>
            <value>Evènement</value>
        </filters>
        <label>Evènement</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Nom de l&apos;Activation</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Programmation Activations</pluralLabel>
    <recordTypes>
        <fullName>RIC_Amb_Programmation_Animation</fullName>
        <active>true</active>
        <label>Programmation Animation</label>
    </recordTypes>
    <recordTypes>
        <fullName>RIC_Amb_Programmation_Ev_nement</fullName>
        <active>true</active>
        <label>Programmation Evènement</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>